welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:2: error: not found: type int
  var de1:int = die1
          ^withoutDoubles:3: error: not found: type int
  var de2:int = die2
          ^